crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__raise-vanilla-args_TRY003.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    name: RaiseVanillaArgs
    body: Avoid specifying long messages outside the exception class
    commit: ~
    fixable: false
  location:
    row: 8
    column: 14
  end_location:
    row: 8
    column: 45
  fix: ~
  parent: ~
- kind:
    name: RaiseVanillaArgs
    body: Avoid specifying long messages outside the exception class
    commit: ~
    fixable: false
  location:
    row: 34
    column: 14
  end_location:
    row: 34
    column: 68
  fix: ~
  parent: ~
- kind:
    name: RaiseVanillaArgs
    body: Avoid specifying long messages outside the exception class
    commit: ~
    fixable: false
  location:
    row: 39
    column: 14
  end_location:
    row: 39
    column: 70
  fix: ~
  parent: ~
- kind:
    name: RaiseVanillaArgs
    body: Avoid specifying long messages outside the exception class
    commit: ~
    fixable: false
  location:
    row: 44
    column: 14
  end_location:
    row: 44
    column: 69
  fix: ~
  parent: ~

