crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__raise-vanilla-class_TRY002.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- - kind:
      name: RaiseVanillaClass
      body: Create your own exception
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 14
    end_location:
      row: 13
      column: 41
    fix: ~
    parent: ~
  - kind:
      name: RaiseVanillaClass
      body: Create your own exception
      suggestion: ~
      fixable: false
    location:
      row: 17
      column: 14
    end_location:
      row: 17
      column: 23
    fix: ~
    parent: ~

