crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__raise-within-try_TRY301.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 12
    end_location:
      row: 9
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 11
      column: 8
    end_location:
      row: 11
      column: 28
    fix: ~
    parent: ~
  - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 16
      column: 16
    end_location:
      row: 16
      column: 36
    fix: ~
    parent: ~
  - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 27
      column: 12
    end_location:
      row: 27
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 29
      column: 8
    end_location:
      row: 29
      column: 28
    fix: ~
    parent: ~
  - kind:
      name: RaiseWithinTry
      body: "Abstract `raise` to an inner function"
      suggestion: ~
      fixable: false
    location:
      row: 34
      column: 16
    end_location:
      row: 34
      column: 36
    fix: ~
    parent: ~

