crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__reraise-no-cause_TRY200.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    name: ReraiseNoCause
    body: "Use `raise from` to specify exception cause"
    commit: ~
    fixable: false
  location:
    row: 15
    column: 8
  end_location:
    row: 15
    column: 27
  fix: ~
  parent: ~
- kind:
    name: ReraiseNoCause
    body: "Use `raise from` to specify exception cause"
    commit: ~
    fixable: false
  location:
    row: 23
    column: 12
  end_location:
    row: 23
    column: 31
  fix: ~
  parent: ~

