crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__too-many-try-statements_TRY101.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    TooManyTryStatements: ~
  location:
    row: 10
    column: 4
  end_location:
    row: 20
    column: 13
  fix: ~
  parent: ~
- kind:
    TooManyTryStatements: ~
  location:
    row: 24
    column: 4
  end_location:
    row: 31
    column: 13
  fix: ~
  parent: ~
- kind:
    TooManyTryStatements: ~
  location:
    row: 35
    column: 4
  end_location:
    row: 51
    column: 13
  fix: ~
  parent: ~

