crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__try-consider-else_TRY300.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- - kind:
      name: TryConsiderElse
      body: "Consider moving this statement to an `else` block"
      suggestion: ~
      fixable: false
    location:
      row: 20
      column: 8
    end_location:
      row: 20
      column: 16
    fix: ~
    parent: ~

