crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__verbose-raise_TRY201.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
expression: diagnostics
---
- - kind:
      name: VerboseRaise
      body: "Use `raise` without specifying exception name"
      suggestion: ~
      fixable: false
    location:
      row: 20
      column: 14
    end_location:
      row: 20
      column: 15
    fix: ~
    parent: ~
  - kind:
      name: VerboseRaise
      body: "Use `raise` without specifying exception name"
      suggestion: ~
      fixable: false
    location:
      row: 63
      column: 18
    end_location:
      row: 63
      column: 19
    fix: ~
    parent: ~
  - kind:
      name: VerboseRaise
      body: "Use `raise` without specifying exception name"
      suggestion: ~
      fixable: false
    location:
      row: 74
      column: 22
    end_location:
      row: 74
      column: 23
    fix: ~
    parent: ~

